enhance error report for required constraint

--- a/src/main/resources/bind-messages.properties
+++ b/src/main/resources/bind-messages.properties
@@ -17,3 +17,4 @@ error.pattern=%s must be '%s'.
 error.patternnot=%s mustn't be '%s'.
 error.index=contains illegal array index
 error.oneof=%s must be one of %s.
+error.wronginput=required %s value, but found %s value.
