code refactor and add long to date support

--- a/src/main/resources/bind-messages.properties
+++ b/src/main/resources/bind-messages.properties
@@ -1,19 +1,20 @@
-error.boolean='%s' must be a boolean.
-error.number='%s' must be a number.
-error.double='%s' must be a number.
-error.float='%s' must be a number.
-error.long='%s' must be a number.
-error.bigdecimal='%s' must be a number.
-error.bigint='%s' must be a number.
-error.uuid='%s' missing or not a valid uuid.
-error.required=%s is required.
-error.maxlength='%s' cannot be longer than %d characters.
-error.minlength='%s' cannot be shorter than %d characters.
-error.max='%s' cannot be greater than %s.
-error.min='%s' cannot be lower than %s.
-error.length='%s' must be %d characters.
-error.pattern='%s' must be '%s'.
-error.patternnot='%s' mustn't be '%s'.
-error.index='%s' contains illegal array index.
-error.oneof='%s' must be one of %s.
-error.wronginput=required %s value, but found %s value.
+error.boolean='%s' must be a boolean
+error.number='%s' must be a number
+error.double='%s' must be a number
+error.float='%s' must be a number
+error.long='%s' must be a number
+error.bigdecimal='%s' must be a number
+error.bigint='%s' must be a number
+error.uuid='%s' missing or not a valid uuid
+error.required=%s is required
+error.maxlength='%s' cannot be longer than %d characters
+error.minlength='%s' cannot be shorter than %d characters
+error.max='%s' cannot be greater than %s
+error.min='%s' cannot be lower than %s
+error.length='%s' must be %d characters
+error.pattern='%s' must be '%s'
+error.patternnot='%s' mustn't be '%s'
+error.index='%s' contains illegal array index
+error.oneof='%s' must be one of %s
+error.wronginput=required %s value, but found %s value
+error.anypassed='%s' must satisfy any of following: %s
