some minor code refactor

--- a/src/main/resources/bind-messages.properties
+++ b/src/main/resources/bind-messages.properties
@@ -6,7 +6,7 @@ error.long='%s' must be a number
 error.bigdecimal='%s' must be a number
 error.bigint='%s' must be a number
 error.uuid='%s' missing or not a valid uuid
-error.required=%s is required
+error.required='%s' is required
 error.maxlength='%s' cannot be longer than %d characters
 error.minlength='%s' cannot be shorter than %d characters
 error.max='%s' cannot be greater than %s
