--- a/src/main/resources/bind-messages.properties
+++ b/src/main/resources/bind-messages.properties
@@ -5,13 +5,14 @@ error.float='%s' must be a number
 error.long='%s' must be a number
 error.bigdecimal='%s' must be a number
 error.bigint='%s' must be a number
-error.uuid='%s' missing or not a valid uuid
+error.uuid='%s' is not a valid uuid
 error.required='%s' is required
 error.maxlength='%s' cannot be longer than %d characters
 error.minlength='%s' cannot be shorter than %d characters
 error.max='%s' cannot be greater than %s
 error.min='%s' cannot be lower than %s
 error.length='%s' must be %d characters
+error.email='%s' is not a valid email
 error.pattern='%s' must be '%s'
 error.patternnot='%s' mustn't be '%s'
 error.index='%s' contains illegal array index
