add w/ + w/o support to max/min and maxLength/minLength constraints

--- a/src/main/resources/bind-messages.properties
+++ b/src/main/resources/bind-messages.properties
@@ -7,10 +7,10 @@ error.bigdecimal='%s' must be a number
 error.bigint='%s' must be a number
 error.uuid='%s' is not a valid uuid
 error.required='%s' is required
-error.maxlength='%s' cannot be longer than %d characters
-error.minlength='%s' cannot be shorter than %d characters
-error.max='%s' cannot be greater than %s
-error.min='%s' cannot be lower than %s
+error.maxlength='%s' must be shorter than %d characters (include boundary: %s)
+error.minlength='%s' must be longer than %d characters (include boundary: %s)
+error.max='%s' must be lower than %s (include boundary: %s)
+error.min='%s' must be greater than %s (include boundary: %s)
 error.length='%s' must be %d characters
 error.email='%s' is not a valid email
 error.pattern='%s' must be '%s'
